--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <p>Bem-vindo(a)! Faça login para acessar sua conta e aproveitar todos os recursos. Simples, rápido e seguro.</p>
             </div>
 
-            <form action="#" method="post"></form>
+            <form action="#" method="post'"></form>
 
         </section>
     </main>
