--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilos/media.css">
 </head>
 <body>
     <main>
@@ -18,7 +19,23 @@
                 <p>Bem-vindo(a)! Faça login para acessar sua conta e aproveitar todos os recursos. Simples, rápido e seguro.</p>
             </div>
 
-            <form action="#" method="post'"></form>
+            <form action="#" method="post">
+                <label for="ilogin"></label>
+                <p><input type="text" name="login" id="ilogin" required>Login:</p>
+
+                <label for="isenha"></label>
+                <p><input type="password" name="senha" id="isenha" required>Senha:</p>
+
+                <p>
+                    <input type="submit">
+                    <input type="reset" value="Limpar">
+                
+                </p>
+                
+
+
+
+            </form>
 
         </section>
     </main>
